@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-11-19T01:06:36Z",
-  "count_outdated" : 111,
-  "uniques_outdated" : 67,
+  "timestamp" : "2025-11-27T01:06:08Z",
+  "count_outdated" : 112,
+  "uniques_outdated" : 68,
   "count" : 113,
   "uniques" : 69,
   "views" : [
-    {
-      "timestamp": "2025-11-12T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-11-18T00:00:00Z",
       "count": 1,
